--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -23,9 +29,211 @@
 </head>
 
 <body>
+  <!-- Site container -->
+  <div class="container-fluid">
+    <!-- Header Start -->
+    <header class="row d-flex justify-content-center">
+      <div class="inner-container col-xs-12 col-lg-11 col-xl-10">
+        <nav class="navbar navbar-expand-lg bg-white">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img class="bigger-logo" src="./img/it-logo.svg" alt="It logo" /></a>
+            <!-- toggle button -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- navbar items container -->
+            <div class="navbar-collapse collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav fs-4 flex-1 w-100 justify-content-evenly">
+                <a class="nav-link pe-4 pt-4 pb-4 active" aria-current="page" href="#">THE STORY</a>
+                <div class="vr"></div>
+                <a class="nav-link pe-4 pt-4 pb-4" href="#">THE MOVIES</a>
+                <div class="vr"></div>
+                <a class="nav-link pe-4 pt-4 pb-4" href="#">THE AUTHOR</a>
+                <div class="vr"></div>
+                <a class="nav-link pe-4 pt-4 pb-4">MORE BOOKS</a>
+                <div class="vr"></div>
+                <a class="nav-link pt-4 pb-4">ORDER NOW</a>
+              </div> <!-- .navbar-nav -->
+            </div> <!-- .navbar-collapse -->
+          </div> <!-- .container-fluid-->
+        </nav> <!-- .navbar -->
+      </div> <!-- .inner-container -->
+    </header>
+    <!-- Header End -->
+    <!-- Main Start -->
+    <main class="row">
+      <section class="col bg-black p-0">
+        <!-- Carousel start -->
+        <div class="container-fluid p-0">
+          <div id="hero-carousel" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            </div> <!-- .carousel-indicators -->
+            <div class="carousel-inner">
+              <div class="carousel-item active position-relative">
+                <div class="position-absolute top-50 start-50 translate-middle">
+                  <div class="d-flex flex-column flex-lg-row align-items-center justify-content-evenly w-100">
+                    <h2 class="display-3 d-lg-none font-oswald text-white text-center text-lg-start me-lg-5">#1 NEW YORK
+                      TIMES <span class="fw-bold">BEST SELLER</span></h2>
+                    <h2
+                      class="display-3 d-none d-lg-block font-oswald text-white text-center text-lg-start me-lg-5 w-25">
+                      #1 NEW YORK TIMES <span class="fw-bold">BEST SELLER</span></h2>
+                    <img src="./img/it-book-cover.jpg" alt="it book cover" />
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+                  </div>
+                </div>
+                <img src="./img/carousel-1.jpg" alt="...">
+              </div>
+              <div class="carousel-item position-relative">
+                <div class="position-absolute top-50 start-50 translate-middle">
+                  <div class="d-flex flex-column flex-lg-row align-items-center justify-content-evenly w-100">
+                    <h2 class="display-4 d-lg-none font-oswald text-white text-center text-lg-start me-lg-5">MEET <span
+                        class="fw-bold">PENNYWISE</span> THE CLOWN</h2>
+                    <h2
+                      class="display-3 d-none d-lg-block font-oswald text-white text-center text-lg-start me-lg-5 w-25">
+                      MEET <span class="fw-bold">PENNYWISE</span> THE CLOWN</h2>
+                    <img src="./img/pennywise.png" alt="it book cover" />
+
+                  </div>
+                </div>
+                <img src="./img/carousel-2.jpg" alt="...">
+              </div>
+
+            </div> <!-- .carousel-inner -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div> <!-- #hero-carousel -->
+        </div> <!-- .inner-container -->
+        <!-- Carousel end -->
+      </section>
+
+      <section class="row justify-content-center p-0">
+        <div class="col inner-container">
+          <ul class="nav mb-3 mt-5 justify-content-evenly" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a class="nav-link active" id="pills-story-tab" data-bs-toggle="pill" data-bs-target="#pills-story" type="button" role="tab"
+                aria-controls="pills-story" aria-selected="true"><img src="./img/thestory-button.svg" width="260px"
+                  alt="the story button" /></a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="pills-clown-tab" data-bs-toggle="pill" data-bs-target="#pills-clown" type="button" role="tab"
+                aria-controls="pills-clown" aria-selected="true"><img src="./img/theclown-button.svg" width="260px"
+                  alt="the clown button" /></a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="pills-kids-tab" data-bs-toggle="pill" data-bs-target="#pills-kids" type="button" role="tab"
+                aria-controls="pills-kids" aria-selected="true"><img src="./img/thekids-button.svg" width="260px"
+                  alt="the kids button" /></a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="pills-town-tab" data-bs-toggle="pill" data-bs-target="#pills-town" type="button" role="tab"
+                aria-controls="pills-town" aria-selected="true"><img src="./img/thetown-button.svg" width="260px"
+                  alt="the town button" /></a>
+            </li>
+          </ul>
+          <div class="tab-content mt-5" id="pills-tabContent">
+            <div class="container tab-pane show active fade" id="pills-story" role="tabpanel" aria-labelledby="pills-story-tab" tabindex="0">
+              <div class="row justify-content-center">
+                <div class="col-12 col-md-5 col-lg-5 col-xl-4 mb-4 text-end">
+                  <img src="./img/the-story.jpg" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-6 col-xl-7 font-oswald">
+                  <h2 class="text-danger">THE STORY</h2>
+                  <p class="fs-3 lh-lg fw-lighter">
+                    Mauris posuere nisi sagittis, aliquam mi sed, efficitur mi. Curabitur nec metus ex. Suspendisse
+                    lobortis, nulla nec lobortis dignissim, nisi nisi scelerisque lorem, nec varius magna nulla id
+                    tortor. Nam posuere vitae turpis sit amet hendrerit. Sed venenatis mattis congue. Quisque mattis,
+                    nisl eget eleifend scelerisque, sapien odio interdum odio, ultrices rhoncus dolor dui non est.
+                    Pellentesque vitae ex neque. Vivamus tempus urna velit, sit amet bibendum urna ornare et. Quisque
+                    nisi odio, egestas quis semper a, elementum vitae augue. Aenean dictum dui dignissim elit eleifend
+                    consectetur. Nulla vitae orci leo. Ut commodo varius tortor, a tempus sem pellentesque eu.</p>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane fade container" id="pills-clown" role="tabpanel" aria-labelledby="pills-clown-tab" tabindex="0">
+              <div class="row justify-content-center">
+                <div class="col-12 col-md-5 col-lg-5 col-xl-4 mb-4 text-end">
+                  <img src="./img/the-clown.jpg" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-6 col-xl-7 font-oswald">
+                  <h2 class="text-danger">THE CLOWN</h2>
+                  <p class="fs-3 lh-lg fw-lighter">
+                    Mauris posuere nisi sagittis, aliquam mi sed, efficitur mi. Curabitur nec metus ex. Suspendisse
+                    lobortis, nulla nec lobortis dignissim, nisi nisi scelerisque lorem, nec varius magna nulla id
+                    tortor. Nam posuere vitae turpis sit amet hendrerit. Sed venenatis mattis congue. Quisque mattis,
+                    nisl eget eleifend scelerisque, sapien odio interdum odio, ultrices rhoncus dolor dui non est.
+                    Pellentesque vitae ex neque. Vivamus tempus urna velit, sit amet bibendum urna ornare et. Quisque
+                    nisi odio, egestas quis semper a, elementum vitae augue. Aenean dictum dui dignissim elit eleifend
+                    consectetur. Nulla vitae orci leo. Ut commodo varius tortor, a tempus sem pellentesque eu.</p>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane fade container" id="pills-kids" role="tabpanel" aria-labelledby="pills-kids-tab" tabindex="0">
+              <div class="row justify-content-center">
+                <div class="col-12 col-md-5 col-lg-5 col-xl-4 mb-4 text-end">
+                  <img src="./img/the-kids.jpg" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-6 col-xl-7 font-oswald">
+                  <h2 class="text-danger">THE KIDS</h2>
+                  <p class="fs-3 lh-lg fw-lighter">
+                    Mauris posuere nisi sagittis, aliquam mi sed, efficitur mi. Curabitur nec metus ex. Suspendisse
+                    lobortis, nulla nec lobortis dignissim, nisi nisi scelerisque lorem, nec varius magna nulla id
+                    tortor. Nam posuere vitae turpis sit amet hendrerit. Sed venenatis mattis congue. Quisque mattis,
+                    nisl eget eleifend scelerisque, sapien odio interdum odio, ultrices rhoncus dolor dui non est.
+                    Pellentesque vitae ex neque. Vivamus tempus urna velit, sit amet bibendum urna ornare et. Quisque
+                    nisi odio, egestas quis semper a, elementum vitae augue. Aenean dictum dui dignissim elit eleifend
+                    consectetur. Nulla vitae orci leo. Ut commodo varius tortor, a tempus sem pellentesque eu.</p>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane fade container" id="pills-town" role="tabpanel" aria-labelledby="pills-town-tab" tabindex="0">
+              <div class="row justify-content-center">
+                <div class="col-12 col-md-5 col-lg-5 col-xl-4 mb-4 text-end">
+                  <img src="./img/the-town.jpg" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-6 col-xl-7 font-oswald">
+                  <h2 class="text-danger">THE TOWN</h2>
+                  <p class="fs-3 lh-lg fw-lighter">
+                    Mauris posuere nisi sagittis, aliquam mi sed, efficitur mi. Curabitur nec metus ex. Suspendisse
+                    lobortis, nulla nec lobortis dignissim, nisi nisi scelerisque lorem, nec varius magna nulla id
+                    tortor. Nam posuere vitae turpis sit amet hendrerit. Sed venenatis mattis congue. Quisque mattis,
+                    nisl eget eleifend scelerisque, sapien odio interdum odio, ultrices rhoncus dolor dui non est.
+                    Pellentesque vitae ex neque. Vivamus tempus urna velit, sit amet bibendum urna ornare et. Quisque
+                    nisi odio, egestas quis semper a, elementum vitae augue. Aenean dictum dui dignissim elit eleifend
+                    consectetur. Nulla vitae orci leo. Ut commodo varius tortor, a tempus sem pellentesque eu.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+
+      </section>
+    </main>
+    <!-- Main End -->
+
+  </div> <!-- .container -->
+
+
+
+
+
+
+  <!-- Bootstrap JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
