--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
       </section> <!-- .row -->
       <!-- Tabs end -->
       <!-- About section start -->
-      <section class="row bg-black align-items-center justify-content-center mt-5 mb-5 pb-5 pt-5"
+      <section class="about-section row bg-black align-items-center justify-content-center mt-5 mb-5 pb-5 pt-5"
         style="min-height: 870px;" id="the-author">
         <div class="inner-container container p-0 mt-5 pt-5 h-100">
           <div class="row h-100">
@@ -312,9 +312,9 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
                   <span class="fs-2 fw-bold">The Stand</span>
                 </button>
               </h2>
-              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+              <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body fs-4 fw-lighter p-1 pb-4 font-cabin">
+                <div class="accordion-body fs-5 fw-lighter p-1 pb-4 font-cabin">
                   The Stand is a post-apocalyptic dark fantasy novel written by American author Stephen King and first published in 1978 by Doubleday. The plot centers on a deadly pandemic of weaponized influenza and its aftermath, in which the few surviving humans gather into factions that are each led by a personification of either good or evil and seem fated to clash with each other. King started writing the story in February 1975,[1] seeking to create an epic in the spirit of The Lord of the Rings. The book was difficult for him to write because of the large number of characters and storylines.
                 </div>
                 <a href="https://en.wikipedia.org/wiki/The_Stand" target="_blank">READ MORE @ WIKIPEDIA.COM</a>
@@ -322,15 +322,15 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
             </div> <!-- .accordion-item -->
             <!-- Accordion item #2-->
             <div class="accordion-item">
-              <h2 class="accordion-header " id="flush-headingTwo">
+              <h2 class="accordion-header" id="flush-headingTwo">
                 <button class="accordion-button collapsed p-5 pb-4 ps-0" type="button" data-bs-toggle="collapse"
                   data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                  <span class="fs-2   fw-bold">The Shining</span>
+                  <span class="fs-2 fw-bold">The Shining</span>
                 </button>
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body  fs-4 fw-lighter pb-4 p-2 font-cabin">
+                <div class="accordion-body  fs-5 fw-lighter pb-4 p-2 font-cabin">
                   The Shining is a 1977 horror novel by American author Stephen King. It is King's third published novel and first hardback bestseller; its success firmly established King as a preeminent author in the horror genre. The setting and characters are influenced by King's personal experiences, including both his visit to The Stanley Hotel in 1974 and his struggle with alcoholism. The novel was adapted into a 1980 film of the same name. The book was followed by a sequel, Doctor Sleep, published in 2013, which was adapted into a film of the same name.
                 </div>
                 <a href="https://en.wikipedia.org/wiki/The_Shining_(novel)" target="_blank">READ MORE @ WIKIPEDIA.COM</a>
@@ -346,7 +346,7 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
               </h2>
               <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body fs-4 fw-lighter pb-4 p-2 font-cabin">
+                <div class="accordion-body fs-5 fw-lighter pb-4 p-2 font-cabin">
                   Misery is an American psychological horror thriller novel written by Stephen King and first published by Viking Press on June 8, 1987.[1] The novel's narrative is based on the relationship of its two main characters – the romance novelist Paul Sheldon and his deranged self-proclaimed number one fan Annie Wilkes. When Paul is seriously injured following a car accident, former nurse Annie brings him to her home, where Paul receives treatment and doses of pain medication. Paul realizes that he is a prisoner and is forced to indulge his captor's whims.
                 </div>
                 <a href="https://en.wikipedia.org/wiki/Misery_(novel)" target="_blank">READ MORE @ WIKIPEDIA.COM</a>
@@ -362,7 +362,7 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
               </h2>
               <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body  fs-4 fw-lighter pb-4 p-2 font-cabin">
+                <div class="accordion-body  fs-5 fw-lighter pb-4 p-2 font-cabin">
                   Carrie is a horror novel by American author Stephen King. It was his first published novel, released on April 5, 1974, with a first print-run of 30,000 copies. Set primarily in the then-future year of 1979, it revolves around the eponymous Carrie White, a friendless, bullied high-school girl from an abusive religious household who uses her newly discovered telekinetic powers to exact revenge on those who torment her. In the process, she causes one of the worst local disasters the town has ever had. 
                 </div>
                 <a href="https://en.wikipedia.org/wiki/Carrie_(novel)" target="_blank">READ MORE @ WIKIPEDIA.COM</a>
@@ -378,7 +378,7 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
               </h2>
               <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body  fs-4 fw-lighter pb-4 p-2 font-cabin">
+                <div class="accordion-body  fs-5 fw-lighter pb-4 p-2 font-cabin">
                   The Green Mile is a 1996 serial novel by American writer Stephen King. It tells the story of death row supervisor Paul Edgecombe's encounter with John Coffey, an unusual inmate who displays inexplicable healing and empathetic abilities. The serial novel was originally released in six volumes before being republished as a single-volume work. The book is an example of magical realism.
                 </div>
                 <a href="https://en.wikipedia.org/wiki/The_Green_Mile_(novel)" target="_blank">READ MORE @ WIKIPEDIA.COM</a>
