--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Oswald:wght@200;300;400;500;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap"
     rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -34,7 +34,7 @@
   <!-- Site container -->
   <div class="container-fluid p-0">
     <!-- Header Start -->
-    <header class="font-oswald row d-flex justify-content-center w-100 sticky-top bg-white p-0 m-0 shadow">
+    <header class="font-roboto row d-flex justify-content-center w-100 sticky-top bg-white p-0 m-0 shadow">
       <div class="inner-container">
         <nav class="navbar navbar-light navbar-expand-lg bg-white">
           <div class="container-fluid">
@@ -79,10 +79,10 @@
               <div class="carousel-item active position-relative">
                 <div class="position-absolute top-50 start-50 translate-middle">
                   <div class="d-flex flex-column flex-lg-row align-items-center justify-content-evenly w-100">
-                    <h2 class="display-3 d-lg-none font-oswald text-white text-center text-lg-start me-lg-5">#1 NEW YORK
+                    <h2 class="display-3 d-lg-none font-roboto text-white text-center text-lg-start me-lg-5">#1 NEW YORK
                       TIMES <span class="fw-bold">BEST SELLER</span></h2>
                     <h2
-                      class="display-3 d-none d-lg-block font-oswald text-white text-center text-lg-start me-lg-5 w-25">
+                      class="display-3 d-none d-lg-block font-roboto text-white text-center text-lg-start me-lg-5 w-25">
                       #1 NEW YORK TIMES <span class="fw-bold">BEST SELLER</span></h2>
                     <img src="./img/it-book-cover.jpg" alt="it book cover" />
                   </div>
@@ -92,10 +92,10 @@
               <div class="carousel-item position-relative">
                 <div class="position-absolute top-50 start-50 translate-middle">
                   <div class="d-flex flex-column flex-lg-row align-items-center justify-content-evenly w-100">
-                    <h2 class="display-6 d-lg-none font-oswald text-white text-center text-lg-start me-lg-5">MEET <span
+                    <h2 class="display-6 d-lg-none font-roboto text-white text-center text-lg-start me-lg-5">MEET <span
                         class="fw-bold">PENNYWISE</span> THE CLOWN</h2>
                     <h2
-                      class="display-4 d-none d-lg-block font-oswald text-white text-center text-lg-start me-lg-5 w-25">
+                      class="display-4 d-none d-lg-block font-roboto text-white text-center text-lg-start me-lg-5 w-25">
                       MEET <span class="fw-bold">PENNYWISE</span> THE CLOWN</h2>
                     <img src="./img/pennywise.png" alt="it book cover" />
                   </div>
@@ -161,9 +161,9 @@
                 <div class="col-11 col-md-6 col-lg-5 col-xl-4 mb-4 text-end">
                   <img src="./img/the-story.jpg" width="80%" alt="">
                 </div>
-                <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-oswald">
+                <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-roboto">
                   <h2 class="fs-1 text-danger">THE STORY</h2>
-                  <p class="fs-4 lh-lg fw-lighter">
+                  <p class="fs-4 lh-lg fw-light">
                     ‘It’ begins with two brothers, Bill and George, making a boat so they can play with it. Bill, the older brother, stays at home due to being sick after the heavy rainstorm that occurred in Derry. George goes out to play with his new boat and gets killed by a clown who called himself Pennywise. Set to uncover the truth behind his brother’s death, Bill goes on an investigation after encountering Pennywise in the form of George’s ghost.
                     </p>
                     <a href="https://bookanalysis.com/stephen-king/it/plot-summary/" target="_blank">READ MORE @ BOOKANALYSIS.COM</a>
@@ -177,9 +177,9 @@
                 <div class="col-11 col-md-6 col-lg-5 col-xl-4 mb-4 text-end">
                   <img src="./img/the-clown.jpg" width="80%" alt="">
                 </div>
-                <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-oswald">
+                <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-roboto">
                   <h2 class="fs-1 text-danger">THE CLOWN</h2>
-                  <p class="fs-4 lh-lg fw-lighter">
+                  <p class="fs-4 lh-lg fw-light">
                     Pennywise slumbered beneath the Earth for millions of years, awaiting the arrival of Mankind. When the town of Derry was built in 1715, IT awoke and began a cycle of feeding on the fears of the people of Stephen King's Derry and then resuming hibernation for cycles of 27 to 30 years.
                   </p>
                   <a href="https://bookanalysis.com/stephen-king/it/plot-summary/" target="_blank">READ MORE @ BOOKANALYSIS.COM</a>
@@ -193,9 +193,9 @@
                 <div class="col-11 col-md-6 col-lg-5 col-xl-4 mb-4 text-end">
                   <img src="./img/the-kids.jpg" width="80%" alt="">
                 </div>
-                <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-oswald">
+                <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-roboto">
                   <h2 class="fs-1 text-danger">THE KIDS</h2>
-                  <p class="fs-4 lh-lg fw-lighter">
+                  <p class="fs-4 lh-lg fw-light">
                     The Losers Club. The Losers Club is a group of seven eleven-year-old misfit children who are united by their unhappy lives. They share the same misery and torment from being the victims of a gang of local bullies led by the increasingly sociopathic Henry Bowers and band together as they struggle to overcome It.</p>
                     <a href="https://bookanalysis.com/stephen-king/it/plot-summary/" target="_blank">READ MORE @ BOOKANALYSIS.COM</a>
                   </div>
@@ -208,11 +208,10 @@
                 <div class="col-11 col-md-6 col-lg-5 col-xl-4 mb-4 text-end">
                   <img src="./img/the-town.jpg" width="80%" alt="">
                 </div>
-                <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-oswald">
+                <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-roboto">
                   <h2 class="fs-1 text-danger">THE TOWN</h2>
-                  <p class="fs-4 lh-lg fw-lighter">
+                  <p class="fs-4 lh-lg fw-light">
                     Derry is a fictional town located in Maine, and it serves as the main setting of the classic coming-of-age horror novel It by legendary horror writer Stephen King. Derry was noted for its many supernatural happenings as well as it was noted to be a conduit or a nexus of paranormal activities and metaphysical events, and it is referenced in many other Stephen King novels.
-
 The town is situated along Interstate 95, to the south of Dexter, the southwest of Old Town, and the west of Bangor and Haven in the southwestern corner of Penobscot County.</p>
 <a href="https://bookanalysis.com/stephen-king/it/plot-summary/" target="_blank">READ MORE @ BOOKANALYSIS.COM</a>                
 </div>
@@ -224,17 +223,17 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
       </section> <!-- .row -->
       <!-- Tabs end -->
       <!-- About section start -->
-      <section class="about-section row bg-black align-items-center justify-content-center mt-5 mb-5 pb-5 pt-5"
-        style="min-height: 870px;" id="the-author">
+      <section class="about-section row bg-black justify-content-center mt-5 mb-5 pb-5 pt-5"
+        style="min-height: 890px;" id="the-author">
         <div class="inner-container container p-0 mt-5 pt-5 h-100">
           <div class="row h-100">
             <div class="col-9 col-md-4 col-lg-3 offset-1 offset-md-2">
               <img src="./img/stephen-king-photo.jpg" width="80%" />
-              <p class="font-oswald fs-3 text-white">STEPHEN KING</p>
+              <p class="font-roboto fs-3 text-white">STEPHEN KING</p>
             </div>
-            <div class="col-10 col-md-5 col-lg-5 offset-1 offset-md-0 font-oswald text-white align-self-center">
+            <div class="col-10 col-md-5 col-lg-5 offset-1 offset-md-0 font-roboto text-white">
               <h2 class="display-5 p-0 m-0 text-danger">THE MASTER OF HORROR</h1>
-                <p class="fs-4 lh-lg fw-lighter ">
+                <p class="fs-4 lh-lg fw-light">
                   It’s nearly impossible to overstate how influential Stephen King is. For the past four decades, no single writer has dominated the landscape of genre writing like him. To date, he is the only author in history to have had more than 30 books become No. 1 best-sellers. He now has more than 70 published books, many of which have become cultural icons, and his achievements extend so far beyond a single genre at this point that it’s impossible to limit him to one — even though, as the world was reminded last year when the feature film adaptation of It became the highest-grossing horror movie on record, horror is still King’s calling card.
                 </p>
                 <a class="mb-5" href="https://www.vox.com/culture/2017/8/4/16066180/stephen-king-themes-cultural-influence-explained" target="_blank">READ MORE @ VOX.COM</a>
@@ -303,7 +302,7 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
       </section>
       <section class="row justify-content-center pb-5 mb-5">
         <div class="col-xxl-7">
-          <div class="accordion accordion-flush font-oswald" id="accordionFlushExample">
+          <div class="accordion accordion-flush font-roboto" id="accordionFlushExample">
             <!-- Accordion item #1-->
             <div class="accordion-item">
               <h2 class="accordion-header " id="flush-headingOne">
@@ -407,10 +406,10 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
                 <div class="carousel-item active position-relative h-100">
                   <div class="position-absolute top-50 start-50 translate-middle">
                     <div class="d-flex justify-content-center flex-column">
-                      <p class="fs-4 font-oswald text-white fw-lighter text-center">
+                      <p class="fs-4 font-roboto text-white fw-lighter text-center">
                         "I was intrigued by the awesome cover art and the way the blurb was written. This book's blurb is just so descriptive and well written that it intrigued me and made me buy this book. When I started reading it I loved the story right from the very first page."
                       </p>
-                      <p class="small font-oswald text-white fw-lighter text-center">
+                      <p class="small font-roboto text-white fw-lighter text-center">
                         Paul Murray
                       </p>
                     </div>
@@ -420,10 +419,10 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
                 <div class="carousel-item position-relative h-100">
                   <div class="position-absolute top-50 start-50 translate-middle">
                     <div class="d-flex justify-content-center flex-column">
-                      <p class="fs-4 font-oswald text-white fw-lighter text-center m-3">
+                      <p class="fs-4 font-roboto text-white fw-lighter text-center m-3">
                         ""IT" is the most epic form any horror can take. The book is absolutely massive, but its bulk is used to accomplish all its greatness. The characters are intricate, the descriptions of Derry's sewer systems, rivers."
                       </p>
-                      <p class="small font-oswald text-white fw-lighter text-center">
+                      <p class="small font-roboto text-white fw-lighter text-center">
                         Sarah Parker
                       </p>
                     </div>
@@ -433,10 +432,10 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
                 <div class="carousel-item position-relative h-100">
                   <div class="position-absolute top-50 start-50 translate-middle">
                     <div class="d-flex justify-content-center flex-column">
-                      <p class="fs-4 font-oswald text-white fw-lighter text-center">
+                      <p class="fs-4 font-roboto text-white fw-lighter text-center">
                         "This book was amazing. I read it over 2 weeks after work in bed, in the pitch black, home alone, and despite setting myself a curfew of 12 o'clock, I found myself reading well into the early hours in the morning."
                       </p>
-                      <p class="small font-oswald text-white fw-lighter text-center">
+                      <p class="small font-roboto text-white fw-lighter text-center">
                         Sam Schuneouli
                       </p>
                     </div>
@@ -463,7 +462,7 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
     </main>
     <!-- Main End -->
     <!-- Footer Start -->
-    <footer class="font-oswald row w-100 bg-white p-3 m-0 justify-content-center">
+    <footer class="font-roboto row w-100 bg-white p-3 m-0 justify-content-center">
       <div class="col inner-container">
         <div class="row">
         <div class="col-10 d-flex align-items-center">
