Fixed validation errors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -7,7 +7,7 @@
   <meta name="description" content="Website dedication to the Stephen King novel It.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
+  <meta property="og:title" content="Assignment #2 Comp2081">
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
@@ -39,8 +39,8 @@
         <nav class="navbar navbar-light navbar-expand-lg bg-white">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img class="header-logo d-none d-lg-block" src="./img/it-logo.svg" alt="It logo" />
-              <img class="d-block d-lg-none" src="./img/it-logo-small.svg" alt="It logo" />
+              <img class="header-logo d-none d-lg-block" src="./img/it-logo.svg" alt="It logo">
+              <img class="d-block d-lg-none" src="./img/it-logo-small.svg" alt="It logo">
             </a>
             <!-- toggle button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -84,10 +84,10 @@
                     <h2
                       class="display-3 d-none d-lg-block font-roboto text-white text-center text-lg-start me-lg-5 w-25">
                       #1 NEW YORK TIMES <span class="fw-bold">BEST SELLER</span></h2>
-                    <img src="./img/it-book-cover.jpg" alt="it book cover" />
+                    <img src="./img/it-book-cover.jpg" alt="it book cover">
                   </div>
                 </div>
-                <img src="./img/carousel-1.jpg" alt="..." />
+                <img src="./img/carousel-1.jpg" alt="carousel background 1">
               </div> <!-- .carousel-item -->
               <div class="carousel-item position-relative">
                 <div class="position-absolute top-50 start-50 translate-middle">
@@ -97,10 +97,10 @@
                     <h2
                       class="display-4 d-none d-lg-block font-roboto text-white text-center text-lg-start me-lg-5 w-25">
                       MEET <span class="fw-bold">PENNYWISE</span> THE CLOWN</h2>
-                    <img src="./img/pennywise.png" alt="it book cover" />
+                    <img src="./img/pennywise.png" alt="it book cover">
                   </div>
                 </div>
-                <img src="./img/carousel-2.jpg" alt="..." />
+                <img src="./img/carousel-2.jpg" alt="carousel background 2">
               </div> <!-- .carousel-item -->
             </div> <!-- .carousel-inner -->
             <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
@@ -121,34 +121,30 @@
           <div class="row">
             <!-- tab buttons start -->
             <ul class="nav mb-5 mt-5 justify-content-evenly" id="pills-tab" role="tablist">
-              <div class="col-12 col-sm-6 col-lg-3">
-                <li class="nav-item tab-button" role="presentation">
-                  <a class="nav-link active" id="pills-story-tab" data-bs-toggle="pill" data-bs-target="#pills-story"
-                    type="button" role="tab" aria-controls="pills-story" aria-selected="true">
-                    <img src="./img/thestory-button.svg" width="100%" alt="the story button" /></a>
+                <li class="nav-item tab-button col-12 col-sm-6 col-lg-3" role="presentation">
+                  <div class="nav-link active w-100" id="pills-story-tab" data-bs-toggle="pill" data-bs-target="#pills-story"
+                    role="tab" aria-controls="pills-story" aria-selected="true">
+                    <img class="w-100" src="./img/thestory-button.svg" alt="the story button">
+                  </div>
+                </li> 
+                <li class="nav-item tab-button col-12 col-sm-6 col-lg-3" role="presentation">
+                  <div class="nav-link w-100" id="pills-clown-tab" data-bs-toggle="pill" data-bs-target="#pills-clown"
+                    role="tab" aria-controls="pills-clown" aria-selected="true"><img
+                    class="w-100" src="./img/theclown-button.svg" alt="the clown button">
+                  </div>
                 </li>
-              </div>
-              <div class="col-12 col-sm-6 col-lg-3">
-                <li class="nav-item tab-button" role="presentation">
-                  <a class="nav-link" id="pills-clown-tab" data-bs-toggle="pill" data-bs-target="#pills-clown"
-                    type="button" role="tab" aria-controls="pills-clown" aria-selected="true"><img
-                      src="./img/theclown-button.svg" width="100%" alt="the clown button" /></a>
+                <li class="nav-item tab-button col-12 col-sm-6 col-lg-3" role="presentation">
+                  <div class="nav-link w-100" id="pills-kids-tab" data-bs-toggle="pill" data-bs-target="#pills-kids"
+                    role="tab" aria-controls="pills-kids" aria-selected="true"><img
+                    class="w-100" src="./img/thekids-button.svg" alt="the kids button">
+                  </div>
                 </li>
-              </div>
-              <div class="col-12 col-sm-6 col-lg-3">
-                <li class="nav-item tab-button" role="presentation">
-                  <a class="nav-link" id="pills-kids-tab" data-bs-toggle="pill" data-bs-target="#pills-kids"
-                    type="button" role="tab" aria-controls="pills-kids" aria-selected="true"><img
-                      src="./img/thekids-button.svg" width="100%" alt="the kids button" /></a>
+                <li class="nav-item tab-button col-12 col-sm-6 col-lg-3" role="presentation">
+                  <div class="nav-link w-100" id="pills-town-tab" data-bs-toggle="pill" data-bs-target="#pills-town"
+                     role="tab" aria-controls="pills-town" aria-selected="true"><img
+                      class="w-100" src="./img/thetown-button.svg" alt="the town button">
+                  </div>
                 </li>
-              </div>
-              <div class="col-12 col-sm-6 col-lg-3">
-                <li class="nav-item tab-button" role="presentation">
-                  <a class="nav-link" id="pills-town-tab" data-bs-toggle="pill" data-bs-target="#pills-town"
-                    type="button" role="tab" aria-controls="pills-town" aria-selected="true"><img
-                      src="./img/thetown-button.svg" width="100%" alt="the town button" /></a>
-                </li>
-              </div>
             </ul>
             <!-- tab buttons end -->
           </div> <!-- .row -->
@@ -159,12 +155,12 @@
               aria-labelledby="pills-story-tab" tabindex="0">
               <div class="row justify-content-center">
                 <div class="col-11 col-md-6 col-lg-5 col-xl-4 mb-4 text-end">
-                  <img src="./img/the-story.jpg" width="80%" alt="">
+                  <img src="./img/the-story.jpg" alt="">
                 </div>
                 <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-roboto">
                   <h2 class="fs-1 text-danger">THE STORY</h2>
                   <p class="fs-4 lh-lg fw-light">
-                    ‘It’ begins with two brothers, Bill and George, making a boat so they can play with it. Bill, the older brother, stays at home due to being sick after the heavy rainstorm that occurred in Derry. George goes out to play with his new boat and gets killed by a clown who called himself Pennywise. Set to uncover the truth behind his brother’s death, Bill goes on an investigation after encountering Pennywise in the form of George’s ghost.
+                    "It" begins with two brothers, Bill and George, making a boat so they can play with it. Bill, the older brother, stays at home due to being sick after the heavy rainstorm that occurred in Derry. George goes out to play with his new boat and gets killed by a clown who called himself Pennywise. Set to uncover the truth behind his brother’s death, Bill goes on an investigation after encountering Pennywise in the form of George’s ghost.
                     </p>
                     <a href="https://bookanalysis.com/stephen-king/it/plot-summary/" target="_blank">READ MORE @ BOOKANALYSIS.COM</a>
                   </div>
@@ -175,7 +171,7 @@
               tabindex="0">
               <div class="row justify-content-center">
                 <div class="col-11 col-md-6 col-lg-5 col-xl-4 mb-4 text-end">
-                  <img src="./img/the-clown.jpg" width="80%" alt="">
+                  <img src="./img/the-clown.jpg" alt="">
                 </div>
                 <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-roboto">
                   <h2 class="fs-1 text-danger">THE CLOWN</h2>
@@ -191,7 +187,7 @@
               tabindex="0">
               <div class="row justify-content-center">
                 <div class="col-11 col-md-6 col-lg-5 col-xl-4 mb-4 text-end">
-                  <img src="./img/the-kids.jpg" width="80%" alt="">
+                  <img src="./img/the-kids.jpg" alt="">
                 </div>
                 <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-roboto">
                   <h2 class="fs-1 text-danger">THE KIDS</h2>
@@ -206,15 +202,16 @@
               tabindex="0">
               <div class="row justify-content-center">
                 <div class="col-11 col-md-6 col-lg-5 col-xl-4 mb-4 text-end">
-                  <img src="./img/the-town.jpg" width="80%" alt="">
+                  <img src="./img/the-town.jpg" alt="">
                 </div>
                 <div class="col-12 col-md-6 col-lg-7 col-xl-5 font-roboto">
                   <h2 class="fs-1 text-danger">THE TOWN</h2>
                   <p class="fs-4 lh-lg fw-light">
                     Derry is a fictional town located in Maine, and it serves as the main setting of the classic coming-of-age horror novel It by legendary horror writer Stephen King. Derry was noted for its many supernatural happenings as well as it was noted to be a conduit or a nexus of paranormal activities and metaphysical events, and it is referenced in many other Stephen King novels.
-The town is situated along Interstate 95, to the south of Dexter, the southwest of Old Town, and the west of Bangor and Haven in the southwestern corner of Penobscot County.</p>
-<a href="https://bookanalysis.com/stephen-king/it/plot-summary/" target="_blank">READ MORE @ BOOKANALYSIS.COM</a>                
-</div>
+                    The town is situated along Interstate 95, to the south of Dexter, the southwest of Old Town, and the west of Bangor and Haven in the southwestern corner of Penobscot County.
+                  </p>
+                  <a href="https://bookanalysis.com/stephen-king/it/plot-summary/" target="_blank">READ MORE @ BOOKANALYSIS.COM</a>                
+                </div>
               </div> <!-- .row -->
             </div> <!-- .tab-pane -->
           </div> <!-- .tab-content -->
@@ -225,14 +222,14 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
       <!-- About section start -->
       <section class="about-section row bg-black justify-content-center mt-5 mb-5 pb-5 pt-5"
         style="min-height: 890px;" id="the-author">
-        <div class="inner-container container p-0 mt-5 pt-5 h-100">
+        <div class="col inner-container container p-0 mt-5 pt-5 h-100">
           <div class="row h-100">
             <div class="col-9 col-md-4 col-lg-3 offset-1 offset-md-2">
-              <img src="./img/stephen-king-photo.jpg" width="80%" />
+              <img src="./img/stephen-king-photo.jpg" alt="Stephen King Photo" class="w-100">
               <p class="font-roboto fs-3 text-white">STEPHEN KING</p>
             </div>
             <div class="col-10 col-md-5 col-lg-5 offset-1 offset-md-0 font-roboto text-white">
-              <h2 class="display-5 p-0 m-0 text-danger">THE MASTER OF HORROR</h1>
+              <h1 class="display-5 p-0 m-0 text-danger">THE MASTER OF HORROR</h1>
                 <p class="fs-4 lh-lg fw-light">
                   It’s nearly impossible to overstate how influential Stephen King is. For the past four decades, no single writer has dominated the landscape of genre writing like him. To date, he is the only author in history to have had more than 30 books become No. 1 best-sellers. He now has more than 70 published books, many of which have become cultural icons, and his achievements extend so far beyond a single genre at this point that it’s impossible to limit him to one — even though, as the world was reminded last year when the feature film adaptation of It became the highest-grossing horror movie on record, horror is still King’s calling card.
                 </p>
@@ -247,44 +244,45 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
         <div class="inner-container">
           <div class="row justify-content-center">
             <div class="col-12 col-sm-4 col-md-6 col-xl-3">
-              <img src="./img/it-book-cover.jpg" width="100%" alt="It Book Cover" />
+              <img src="./img/it-book-cover.jpg" alt="It Book Cover" class="w-100">
             </div>
             <div class="form-text col-12 col-sm-6 col-md-5 col-xl-7 col-xxl-6 font-cabin ms-2">
               <h3 class="display-3 m-0 text-black">It</h3>
               <p>by <span class="fw-bold">Stephen King</span></p>
               <p class="fs-1 text-danger fw-bold mt-4">$18.95</p>
               <p class="small fw-bold">Paperback Edition</p>
-              <div class="row mt-4 w-100 mb-5">
-                <form action="" method="" class="d-flex flex-column flex-lg-row">
-                  <div type="button" class="paperback col-12 p-4 border text-center me-1 flex-fill">
+              <div class="row mt-4 w-100">
+                <div class="d-flex flex-column flex-lg-row mb-5">
+                  <div class="paperback col-12 p-4 border text-center me-1 flex-fill">
                     <p class="m-0 fs-7 small fw-bold text-black">PAPERBACK</p>
                     <p class="m-0 small text-danger"><strong>$18.95</strong></p>
                   </div>
-                  <div type="button" class="hardcover col-12 p-4 border text-center me-1 flex-fill">
+                  <div class="hardcover col-12 p-4 border text-center me-1 flex-fill">
                     <p class="m-0 fs-7 small fw-bold text-black">HARDCOVER</p>
                     <p class="m-0 fs-7 small fw-bold text-danger"><strong>$32.27</strong></p>
                   </div>
-                  <div type="button" class="e-book col-12 p-4 border text-center flex-fill">
+                  <div class="e-book col-12 p-4 border text-center flex-fill">
                     <p class="m-0 fs-7 small fw-bold text-black">E-BOOK</p>
                     <p class="m-0 fs-7 small fw-bold text-danger"><strong>$11.48</strong></p>
                   </div>
               </div> <!-- .row -->
-              <div class="row">
+              <div class="row mb-4">
                 <div class="col input-group input-group-lg p-0">
                   <input class="form-control rounded-0" type="number" id="quantity" name="quantity" min="1" max="10"
                     value="1">
                 </div>
-                <div type="submit" id="order-button"
+                <div id="order-button"
                   class="col bg-black d-flex justify-content-center align-items-center p-3">
                   <a class="text-white text-decoration-none">ADD TO CART</a>
                 </div>
+              </div>
               </div> <!-- .row -->
-              <div class="row">
-                <div class="mt-3 bg-light d-flex justify-content-center align-items-center p-4">
+              <div class="row m-1">
+                <div class="bg-light d-flex justify-content-center align-items-center p-4">
                   <p class="m-0 text-black">Ships within 1-2 weeks. <STRONG>Free shipping on Canadian orders!</STRONG></p>
                 </div>
               </div>
-              </form>
+              
             </div> <!-- .form-text -->
           </div> <!-- .row -->
         </div> <!-- .inner-container -->
@@ -295,7 +293,7 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
         <div class="col m-0 p-0">
           <div class="bg-red">
             <div class="container">
-              <p class="text-uppercase fs-1 text-white p-4 ps-0 m-0">other novels by <strong>steven king</strong></p>
+              <h2 class="text-uppercase fs-1 text-white p-4 ps-0 m-0">other novels by <strong>steven king</strong></h2>
             </div>
           </div>
         </div>
@@ -389,6 +387,7 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
       <!-- According section end -->
       <!-- Book Reviews -->
       <section class="row p-0 bg-black p-2">
+        <h2 class="hidden">Reader Reviews</h2>
         <!-- Carousel start -->
         <div class="col p-0">
           <div class="p-0 h-100">
@@ -441,7 +440,7 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
                     </div>
                   </div>
                 </div> <!-- .carousel-item -->
-                <img src="./img/carousel-1.jpg" alt="..." height="500px" width="auto" />
+                <img src="./img/carousel-1.jpg" alt="dark background image" height="500">
               </div> <!-- .carousel-inner -->
               <button class="carousel-control-prev" type="button" data-bs-target="#review-carousel"
                 data-bs-slide="prev">
@@ -458,7 +457,6 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
         </div>
       </section>
       <!-- Carousel end -->
-      </section>
     </main>
     <!-- Main End -->
     <!-- Footer Start -->
@@ -470,8 +468,8 @@ The town is situated along Interstate 95, to the south of Dexter, the southwest 
         </div>
         <div class="col-2 d-flex align-items-center">
           <a class="navbar-brand" href="#">
-            <img class="footer-logo d-none d-lg-block" src="./img/it-logo.svg" alt="It logo" />
-            <img class="d-block d-lg-none" src="./img/it-logo-small.svg" alt="It logo" />
+            <img class="footer-logo d-none d-lg-block" src="./img/it-logo.svg" alt="It logo">
+            <img class="d-block d-lg-none" src="./img/it-logo-small.svg" alt="It logo">
           </a>
         </div>
       </div>
